--- a/Modulo Analisis De Datos/AnalisisDeDatos.html
+++ b/Modulo Analisis De Datos/AnalisisDeDatos.html
@@ -21,6 +21,7 @@
                 display: none;
             }
         }
+
     </style>
 </head>
 
@@ -63,10 +64,10 @@
                     <div class="row" style="height: 95vh;">
                         <div class="col-lg-4" style="background: var(--bs-list-group-active-border-color); ">
                             <div id="BAOColumn" class="d-xxl-flex justify-content-xxl-start align-items-xxl-center list-group" style="background: var(--bs-CR-black-dark);border-width: 20px;border-color: var(--bs-emphasis-color);height: 100%;padding-right: 10px;">
-                                <a id="ResumenGeneralBtn" class="d-xxl-flex align-items-xxl-center list-group-item list-group-item-action" href="#ResumenGeneral" data-bs-toggle="list" style="width: 95%;margin-right: 10px;margin-left: 10px;margin-top: 10px;border-radius: 2px;height: 46px;font-family: hedliner, sans-serif;font-weight: bold;">Resumen General</a>
-                                <a id="ResumenIndividualBtn" class="d-xxl-flex align-items-xxl-center list-group-item list-group-item-action" href="#ResumenIndividual" data-bs-toggle="list" style="width: 95%;margin-right: 10px;margin-left: 10px;margin-top: 10px;border-radius: 2px;height: 46px;font-weight: bold;font-family: hedliner;">Resumen Individual</a>
-                                <a id="ResumenIndividualBtn" class="d-xxl-flex align-items-xxl-center list-group-item list-group-item-action" href="#UserPersona" data-bs-toggle="list" style="width: 95%;margin-right: 10px;margin-left: 10px;margin-top: 10px;border-radius: 2px;height: 46px;font-family: hedliner;font-weight: bold;">User Persona</a>
-                                <a id="AnalisisPsicograficosBtn" class="d-xxl-flex align-items-xxl-center list-group-item list-group-item-action" href="#AnalisisPsicograficos" data-bs-toggle="list" style="width: 95%;margin-right: 10px;margin-left: 10px;margin-top: 10px;border-radius: 2px;height: 46px;font-family: hedliner;font-weight: bold;">Análisis Psicograficos</a>
+                                <a id="ResumenGeneralBtn" class="align-items-xxl-center list-group-item list-group-item-action" href="#ResumenGeneral" data-bs-toggle="list" style="width: 95%;margin-right: 10px;margin-left: 10px;margin-top: 10px;border-radius: 2px;height: 46px;font-family: hedliner, sans-serif;font-weight: bold;">Resumen General</a>
+                                <a id="ResumenIndividualBtn" class="align-items-xxl-center list-group-item list-group-item-action" href="#ResumenIndividual" data-bs-toggle="list" style="width: 95%;margin-right: 10px;margin-left: 10px;margin-top: 10px;border-radius: 2px;height: 46px;font-weight: bold;font-family: hedliner;">Resumen Individual</a>
+                                <a id="ResumenIndividualBtn" class="align-items-xxl-center list-group-item list-group-item-action" href="#UserPersona" data-bs-toggle="list" style="width: 95%;margin-right: 10px;margin-left: 10px;margin-top: 10px;border-radius: 2px;height: 46px;font-family: hedliner;font-weight: bold;">User Persona</a>
+                                <a id="AnalisisPsicograficosBtn" class="align-items-xxl-center list-group-item list-group-item-action" href="#AnalisisPsicograficos" data-bs-toggle="list" style="width: 95%;margin-right: 10px;margin-left: 10px;margin-top: 10px;border-radius: 2px;height: 46px;font-family: hedliner;font-weight: bold;">Análisis Psicograficos</a>
                                 <div style="height: 95%;"></div>
                             </div>
                         </div>
