--- a/Modulo Analisis De Datos/AnalisisDeDatos.html
+++ b/Modulo Analisis De Datos/AnalisisDeDatos.html
@@ -338,95 +338,98 @@
                                             </ul>
                                             <hr>
                                             <h2 id="tabla-de-puntuaciones-y-razones">Tabla de Puntuaciones y Razones</h2>
-                                            <table>
-                                            <thead>
-                                            <tr>
-                                            <th>Aspecto Evaluado</th>
-                                            <th>Puntuación</th>
-                                            <th>Razón Principal</th>
-                                            </tr>
-                                            </thead>
-                                            <tbody><tr>
-                                            <td>Experiencia General</td>
-                                            <td>9</td>
-                                            <td>Encuentra todo lo que necesita y la comida es de calidad.</td>
-                                            </tr>
-                                            <tr>
-                                            <td>Experiencia General</td>
-                                            <td>10</td>
-                                            <td>Es rico. Frescura, buen precio y alta calidad.</td>
-                                            </tr>
-                                            <tr>
-                                            <td>Experiencia General</td>
-                                            <td>9</td>
-                                            <td>Calidad del pollo, sabor, precio, ubicaciones de sus restaurantes.</td>
-                                            </tr>
-                                            <tr>
-                                            <td>Experiencia General</td>
-                                            <td>10</td>
-                                            <td>Le gusta la comida.</td>
-                                            </tr>
-                                            <tr>
-                                            <td>Experiencia General</td>
-                                            <td>10</td>
-                                            <td>Le gusta mucho y es rápido.</td>
-                                            </tr>
-                                            <tr>
-                                            <td>Experiencia General</td>
-                                            <td>8</td>
-                                            <td>Papas fritas saben bastante natural y tienen buen sabor.</td>
-                                            </tr>
-                                            <tr>
-                                            <td>Experiencia General</td>
-                                            <td>9</td>
-                                            <td>Súper bien todo lo que se consume.</td>
-                                            </tr>
-                                            <tr>
-                                            <td>Experiencia General</td>
-                                            <td>10</td>
-                                            <td>Siempre tienen lo que necesita.</td>
-                                            </tr>
-                                            <tr>
-                                            <td>Experiencia General</td>
-                                            <td>10</td>
-                                            <td>Relación precio-calidad.</td>
-                                            </tr>
-                                            <tr>
-                                            <td>Experiencia General</td>
-                                            <td>8</td>
-                                            <td>Sabor y atención.</td>
-                                            </tr>
-                                            <tr>
-                                            <td>Experiencia General</td>
-                                            <td>9</td>
-                                            <td>Es muy accesible considerando la calidad.</td>
-                                            </tr>
-                                            <tr>
-                                            <td>Experiencia General</td>
-                                            <td>7</td>
-                                            <td>Precio y porque siempre olvidan algo o se equivocan en el pedido.</td>
-                                            </tr>
-                                            <tr>
-                                            <td>Experiencia General</td>
-                                            <td>8</td>
-                                            <td>Sabor, ubicación, locales limpios, precio.</td>
-                                            </tr>
-                                            <tr>
-                                            <td>Experiencia General</td>
-                                            <td>10</td>
-                                            <td>Sabrosa.</td>
-                                            </tr>
-                                            <tr>
-                                            <td>Experiencia General</td>
-                                            <td>10</td>
-                                            <td>Muy rico y muy bien elaborado.</td>
-                                            </tr>
-                                            <tr>
-                                            <td>Experiencia General</td>
-                                            <td>8</td>
-                                            <td>Hasta el momento buena experiencia.</td>
-                                            </tr>
-                                            </tbody></table>
+                                            <table style="border-collapse: collapse; width: 100%; font-family: inherit; text-align: left; border: 1px solid #ddd;">
+                                                <thead>
+                                                    <tr>
+                                                        <th style="border: 1px solid #ddd; padding: 8px; background-color: #f4f4f4; font-weight: bold;">Aspecto Evaluado</th>
+                                                        <th style="border: 1px solid #ddd; padding: 8px; background-color: #f4f4f4; font-weight: bold;">Puntuación</th>
+                                                        <th style="border: 1px solid #ddd; padding: 8px; background-color: #f4f4f4; font-weight: bold;">Razón Principal</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Experiencia General</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">9</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Encuentra todo lo que necesita y la comida es de calidad.</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Experiencia General</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">10</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Es rico. Frescura, buen precio y alta calidad.</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Experiencia General</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">9</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Calidad del pollo, sabor, precio, ubicaciones de sus restaurantes.</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Experiencia General</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">10</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Le gusta la comida.</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Experiencia General</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">10</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Le gusta mucho y es rápido.</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Experiencia General</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">8</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Papas fritas saben bastante natural y tienen buen sabor.</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Experiencia General</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">9</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Súper bien todo lo que se consume.</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Experiencia General</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">10</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Siempre tienen lo que necesita.</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Experiencia General</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">10</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Relación precio-calidad.</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Experiencia General</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">8</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Sabor y atención.</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Experiencia General</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">9</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Es muy accesible considerando la calidad.</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Experiencia General</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">7</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Precio y porque siempre olvidan algo o se equivocan en el pedido.</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Experiencia General</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">8</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Sabor, ubicación, locales limpios, precio.</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Experiencia General</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">10</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Sabrosa.</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Experiencia General</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">10</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Muy rico y muy bien elaborado.</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Experiencia General</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">8</td>
+                                                        <td style="border: 1px solid #ddd; padding: 8px;">Hasta el momento buena experiencia.</td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                            
                                             <hr>
                                             <h2 id="aspectos-destacados">Aspectos Destacados</h2>
                                             <ol>
