--- a/Modulo De config/PaginaPrincipal.html
+++ b/Modulo De config/PaginaPrincipal.html
@@ -24,13 +24,12 @@
 
         .list-group {
             overflow-y: scroll;
-            /*<body style="width: 100%;" onload="deleteFromLocStrg()">*/
         }
         
     </style>
 </head>
 
-<body style="width: 100%;" onload="">
+<body style="width: 100%;" onload="deleteFromLocStrg()">
     <div class="text-center d-lg-flex justify-content-lg-center align-items-lg-center" style="background: var(--bs-black);height: 25vh;margin: 0px;border-radius: 3px;"><a class="navbar-brand align-items-center justify-content-xxl-end align-items-xxl-center sidebar-brand m-0" href="https://www.cheetah-research.ai/home/">
 
         <img class="mx-auto d-none d-md-block large-image" 
