cambios para el Analisis de experiencia de cliente

--- a/Modulo De config/LanzarEstudio.html
+++ b/Modulo De config/LanzarEstudio.html
@@ -145,6 +145,7 @@
                                 <option value="individual_questions">Modulo de Analisis Individual</option>
                                 <option value="psicographic_questions">Modulo de Analisis Psicografico</option>
                                 <option value="user_personas">Modulo de Users Personas</option>
+                                <option value="costumer_experience">Modulo Costumer Experience</option>
                             </select>    
 
                             <ul class="list-group" id="ModulesLST" style="font-family: IBM Plex Sans;">
