debi tirar masw fotos

--- a/Modulo De config/VisualizacionDeResultado.html
+++ b/Modulo De config/VisualizacionDeResultado.html
@@ -243,10 +243,10 @@
                                 <!-- Contenedor para el textarea y el contenido del User Persona -->
                                 <div style="display: flex; gap: 20px;">
                                     <!-- Textarea -->
-                                    <textarea id="UserPersonaTextArea" style="flex: 1;"></textarea>
+                                    <textarea id="CostumerExperienceTextArea" style="flex: 1;"></textarea>
                             
                                     <!-- Contenido del User Persona -->
-                                    <div id="UserPersonaContent" style="flex: 1;">
+                                    <div id="CostumerExperienceContent" style="flex: 1;">
                                     </div>
                                 </div>
                             </div>
