--- a/Modulo De config/LanzarEstudio.html
+++ b/Modulo De config/LanzarEstudio.html
@@ -133,7 +133,7 @@
 
                         <div class="mb-3">
                             <p style="font-size: 20px;color: var(--bs-emphasis-color);margin-bottom: 5px;font-family: hedliner;">Dominios Autorizados</p>
-                            <input class="form-control" type="text" id="DominiosTXT" name="bservaciones Importantes" placeholder="@unitec.edu" style="font-family: IBM Plex Sans;">
+                            <input class="form-control" type="text" id="DominiosTXT" name="bservaciones Importantes" placeholder="unitec.edu" style="font-family: IBM Plex Sans;">
                             <button class="btn btn-primary" id="AgregarDominioBTN" style="margin-top: 10px;font-family: hedliner; margin-right: 10px; ">Agregar</button>
                             <button class="btn btn-primary" id="guardarDominioBTN" style="margin-top: 10px;font-family: hedliner;">Guardar</button>
 
