cat, no cat. Let formdata

--- a/Modulo De config/VisualizacionDeResultado.html
+++ b/Modulo De config/VisualizacionDeResultado.html
@@ -195,7 +195,7 @@
                                     <div id="ResumenIndividualContent" style="flex: 1;">
                                     </div>
 
-                                    <div id="charts-containerResumenIndividual"></div>
+                                    <div id="charts-containerResumenIndividual" style="flex: 1;"></div>
                                 </div>
                             </div>
                             
