--- a/Modulo De config/VisualizacionDeResultado.html
+++ b/Modulo De config/VisualizacionDeResultado.html
@@ -189,13 +189,15 @@
                                 <div style="display: flex; gap: 20px;">
 
                                     <!-- Textarea -->
-                                    <textarea id="ResumenIndividualTextArea" style="flex: 1;"></textarea>
+                                    <textarea id="ResumenIndividualTextArea" style="flex: 1;">
+                                    </textarea>
                                 
                                     <!-- Contenido del resumen individual -->
                                     <div id="ResumenIndividualContent" style="flex: 1;">
                                     </div>
 
-                                    <div id="charts-containerResumenIndividual" style="flex: 1;"></div>
+                                    <div id="charts-containerResumenIndividual" style="flex: 1;">
+                                    </div>
                                 </div>
                             </div>
                             
