--- a/Modulo De config/VisualizacionDeResultado.html
+++ b/Modulo De config/VisualizacionDeResultado.html
@@ -175,11 +175,11 @@
                                 <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 10px;">
                                     <!-- Combobox para seleccionar display style -->
                                     <div>
-                                        <label for="ComboBox_ResumenIndividualDS" style="font-family: hedliner;">Selecciona visualizacion:</label>
+                                        <label id="ComboBox_ResumenIndividualDSLBL" for="ComboBox_ResumenIndividualDS" style="font-family: hedliner;">Selecciona visualizacion:</label>
                                         <select id="ComboBox_ResumenIndividualDS" style="font-family: hedliner;">
                                             <option value="---">---</option>
-                                            <option value="individual_Cat">Visualización categórica</option>
-                                            <option value="percentage_nonCat">Visualización no categórica</option>
+                                            <option value="individual_Cat">Visualización grafica</option>
+                                            <option value="percentage_nonCat">Visualización textual</option>
                                         </select>
                                     </div>
                                 </div>
