--- a/Modulo Analisis De Datos/AnalisisDeDatos.html
+++ b/Modulo Analisis De Datos/AnalisisDeDatos.html
@@ -29,6 +29,11 @@
 
     <style>
 
+.markmap > svg {
+        width: 100%;
+        height: 100%;
+      }
+
         /* Estilo básico para el modal */
         .modal {
             display: none; /* Por defecto el modal está oculto */
