cambios en el modulo de configuracion

--- a/Modulo De config/VisualizacionDeResultado.html
+++ b/Modulo De config/VisualizacionDeResultado.html
@@ -126,6 +126,8 @@
                                     <button id="toggle-textarea_ResumenGeneral" style="border-radius: 5px;">Editar</button>
                                     <button id="save-textarea_ResumenGeneral" style="border-radius: 5px;">Guardar Cambios</button>
                                     <button id="export_ResumenGeneral" style="border-radius: 5px;">Exportar</button>
+                                    <button id="download_markmap" style="display: none;">Descargar Mapa Mental</button>
+
 
                                 </div>
                             
