--- a/Modulo De config/CreacionDeEstudio.html
+++ b/Modulo De config/CreacionDeEstudio.html
@@ -93,7 +93,7 @@
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/theme.js"></script>
     <script src="js/script_PPCrearEstudio.js"></script>
-    <script src="js/Script_CheckSession.js"></script>
+    <!-- <script src="js/Script_CheckSession.js"></script> -->
 </body>
 
 </html>
