--- a/Recolección de Datos/Chat.html
+++ b/Recolección de Datos/Chat.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Recolección de Datos</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../Modulo De config/assets/assets_accounts/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/Font%20Awesome%205%20Brands.css">
     <link rel="stylesheet" href="assets/css/Font%20Awesome%205%20Free.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&amp;display=swap">
@@ -25,9 +25,9 @@
 </head>
 
 <body class="d-flex flex-column" style="height: 100%;background: url(&quot;assets/img/Main%20BG.png&quot;) center / cover; backdrop-filter: brightness(167%) contrast(51%) invert(15%);" onload="initializePage()">
-    <div id="overlay" style="display: flex;">
+    <!-- <div id="overlay" style="display: flex;">
         
-    </div>
+    </div> -->
 
     <div class="container-fluid d-flex flex-row justify-content-start align-items-center align-content-center" id="Header-BG" style="height: 8%;width: 100%;background: #0a0a0adc;backdrop-filter: blur(2px);-webkit-backdrop-filter: blur(2px);">
         <div class="row d-flex flex-column justify-content-center align-content-center" style="height: 100%;">
