--- a/Recolección de Datos/Chat.html
+++ b/Recolección de Datos/Chat.html
@@ -24,7 +24,7 @@
     </style>
 </head>
 
-<body class="d-flex flex-column" style="height: 100%;background: url(&quot;assets/img/Main%20BG.png&quot;) center / cover; backdrop-filter: brightness(167%) contrast(51%) invert(15%);" onload="initializePage()">
+<body class="d-flex flex-column" style="height: 100%;background: url(&quot;assets/img/Main%20BG.png&quot;) center / cover; backdrop-filter: brightness(167%) contrast(51%) invert(15%);">
     <div id="overlay" style="display: flex;">
         
     </div>
@@ -85,8 +85,10 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tinycolor/1.4.2/tinycolor.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
-    <script src="Chat.js"></script>
-
+    <script type="module" src="Chat.js"></script>
+    <script>
+        window.onload = initializePage;
+    </script>
 </body>
 
 </html>
