--- a/Recolección de Datos/Chat.html
+++ b/Recolección de Datos/Chat.html
@@ -85,7 +85,7 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tinycolor/1.4.2/tinycolor.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
-    <script type="module" src="Chat.js"></script>
+    <script src="Chat.js"></script>
     <script>
         window.onload = initializePage;
     </script>
