Testing Chat BG

--- a/Recolección de Datos/Chat.html
+++ b/Recolección de Datos/Chat.html
@@ -37,7 +37,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid d-flex flex-column" id="Chat-BG" style="height: 92%;background: linear-gradient(#ffffff00 0%, var(--bs-CR-gray) 77%, var(--bs-CR-gray) 84%, var(--bs-CR-gray-dark) 88%, var(--bs-CR-gray-dark) 92%, var(--bs-CR-gray-dark) 97%), transparent;backdrop-filter: opacity(0.45) brightness(178%) contrast(200%) invert(100%);-webkit-backdrop-filter: opacity(0.45) brightness(178%) contrast(200%) invert(100%);">
+    <div class="container-fluid d-flex flex-column" id="Chat-BG" style="height: 92%;background: linear-gradient(#ffffff00 -20%, var(--bs-CR-gray-dark) 120%, var(--bs-CR-gray-dark) 97%), transparent;backdrop-filter: opacity(0.45) brightness(178%) contrast(200%) invert(100%);-webkit-backdrop-filter: opacity(0.45) brightness(178%) contrast(200%) invert(100%);">
         <div class="row flex-fill justify-content-center align-items-center order-2" id="Chat-Box">
             <div class="col text-truncate d-sm-block d-md-block d-lg-block d-xl-block text-wrap" style="height: 100%;overflow-y: visible;">
                 <div class="row px-3 py-2" id="Empty-Feed" style="display: flex;">
