--- a/Modulo De config/LanzarEstudio.html
+++ b/Modulo De config/LanzarEstudio.html
@@ -151,6 +151,7 @@
                                 <option value="psicographic_questions">Modulo de Analisis Psicografico</option>
                                 <option value="user_personas">Modulo de Users Personas</option>
                                 <option value="customer_experience">Modulo customer Experience</option>
+                                <option value="customer_satisfaction">Modulo de Customer Satisfaction</option>
                             </select>    
 
                             <ul class="list-group" id="ModulesLST" style="font-family: IBM Plex Sans;">
