--- a/Modulo Analisis De Datos/ConversaContuData.html
+++ b/Modulo Analisis De Datos/ConversaContuData.html
@@ -112,10 +112,8 @@
                             <div class="row px-3 py-2" id="Empty-Feed" style="display: flex;">
                                 <div class="col d-flex d-xl-flex flex-column justify-content-center align-items-center align-self-center justify-content-xl-center align-items-xl-center" style="overflow: hidden;overflow-y: auto;min-height: 30.5rem;max-height: 30.5rem;height: auto;">
                                     <div class="card border-0" id="EmptyF-BG" style="background: linear-gradient(#13131364 0%, #ffffff08), #0a0a0a9c">
-                                        <div class="card-body text-center">
-                                            <p class="card-text" style="color: #aaa7aa;">Escribe algo para charlar con Socrates</p>
-                                            <p class="card-text" style="font-family: hedliner;font-size: 25px;color: #aaa7aa;"><strong>Cheetah Research</strong></p><img src="assets/img/Cheetah%20Paw%20Icon.svg" style="width: 60px;height: 60px;filter: invert(70%);">
-                                            <p class="card-text" style="font-family: League Spartan;padding: 30px;"><span style="color: var(--bs-CR-orange);">Pista: ¡Di Hola!</span></p>
+                                        <div id = "questionContainer" class="card-body text-center">
+                                            <p class="card-text" style="color: #aaa7aa;">Escribe algo para charlar con Sócrates. Te sugerimos una de las siguientes preguntas:</p>
                                         </div>
                                     </div>
                                 </div>
