--- a/Modulo De config/LanzarEstudio.html
+++ b/Modulo De config/LanzarEstudio.html
@@ -132,7 +132,7 @@
 
                         <div class="mb-3">
                             <p style="font-size: 20px;color: var(--bs-emphasis-color);margin-bottom: 5px;font-family: hedliner;">Dominios Autorizados</p>
-                            <input class="form-control" type="text" id="DominiosTXT" name="bservaciones Importantes" placeholder="unitec.edu" style="font-family: IBM Plex Sans;">
+                            <input class="form-control" type="text" id="DominiosTXT" name="bservaciones Importantes" placeholder="marketing-total.com" style="font-family: IBM Plex Sans;">
                             <button class="btn btn-primary" id="AgregarDominioBTN" style="margin-top: 10px;font-family: hedliner; margin-right: 10px; ">Agregar</button>
                             <button class="btn btn-primary" id="guardarDominioBTN" style="margin-top: 10px;font-family: hedliner;">Guardar</button>
 
@@ -146,11 +146,11 @@
 
                             <select id="Combobox_Modules" style="font-family: IBM Plex Sans; margin-top: 10px; margin-bottom: 10px;">
                                 <option value="general">Modulo de Analisis General</option>
-                                <option value="individual_questions">Modulo de Analisis Individual</option>
-                                <option value="psicographic_questions">Modulo de Analisis Psicografico</option>
-                                <option value="user_personas">Modulo de Users Personas</option>
-                                <option value="customer_experience">Modulo customer Experience</option>
-                                <option value="customer_satisfaction">Modulo de Customer Satisfaction</option>
+                                <option value="individual_questions">Modulo de Analisis Individuales</option>
+                                <option value="psicographic_questions">Modulo de Analisis Psicograficos</option>
+                                <option value="user_personas">Modulo de User Personas</option>
+                                <option value="customer_experience">Modulo Customer Experience</option>
+                                <option value="customer_satisfaction">Modulo NPS y Satisfaccion</option>
                             </select>    
 
                             <ul class="list-group" id="ModulesLST" style="font-family: IBM Plex Sans;">
