--- a/Modulo De config/CreacionDeEstudio.html
+++ b/Modulo De config/CreacionDeEstudio.html
@@ -77,7 +77,7 @@
         </nav>
 
         <div class="d-flex flex-column" id="content-wrapper" style="position: relative;">
-            <div class="card" id="contentCard_PaginaOverview" style="margin: 0px;height: calc(100vh - 1px);padding: 10px;overflow-x: hidden;overflow-y: scroll;border-radius: 2px; background-color: #e4e4e4;">
+            <div class="card" id="contentCard_PaginaOverview" style="margin: 0px;height: calc(100vh - 1px);padding: 10px;overflow-x: hidden;overflow-y: scroll;border-radius: 2px; background-color: #f0f0f0;">
                 <div id="form-containerStudy">
 
                 </div>
