Colores en Botones de Creacion, Encuestador, Encuesta, Lanzar

--- a/Modulo De config/Encuesta.html
+++ b/Modulo De config/Encuesta.html
@@ -128,7 +128,7 @@
                         
                     </div>
                     <div class="mb-3" style="font-family: IBM Plex Sans;"></div>
-                    <div style="width: 250px;font-family: hedliner;"><button class="btn btn-primary d-block w-100" id="GuardarEncuestaBtn" type="submit" style="font-weight: bold;font-size: 20px;border-top-left-radius: 10px;border-top-right-radius: 10px;border-bottom-right-radius: 10px;border-bottom-left-radius: 10px;margin-top: 10px;font-family: hedliner;">Guardar Encuesta</button></div>
+                    <div style="width: 250px;font-family: hedliner;"><button class="btn btn-primary d-block w-100" id="GuardarEncuestaBtn" type="submit" style="font-weight: bold;font-size: 20px;border-top-left-radius: 10px;border-top-right-radius: 10px;border-bottom-right-radius: 10px;border-bottom-left-radius: 10px;margin-top: 10px;font-family: hedliner; color: var(--bs-CR-gray); background-color: var(--bs-CR-orange);">Guardar Encuesta</button></div>
                 </form>
 
                 
