Colores en Botones (css modificado)

--- a/Modulo De config/LanzarEstudio.html
+++ b/Modulo De config/LanzarEstudio.html
@@ -175,7 +175,7 @@
 
                         
 
-                        <div style="height: 5px;background: var(--bs-primary);margin-top: 24px;margin-bottom: 14px;border-radius: 5px;"></div>
+                        <div style="height: 5px;background: var(--bs-CR-orange);margin-top: 24px;margin-bottom: 14px;border-radius: 5px;"></div>
 
 
                         
