--- a/Modulo De config/Encuesta.html
+++ b/Modulo De config/Encuesta.html
@@ -122,7 +122,7 @@
                     <div class="mb-3" style="font-family: hedliner;">
                         <p style="font-size: 20px;color: var(--bs-emphasis-color);margin-bottom: 5px;font-family: hedliner;">Attachment</p><input class="form-control" type="file" id="AnexoPregunta" style="font-family: hedliner;"><input class="form-control" type="text" id="AnexoPreguntaURL" name="Nombre" placeholder="URL" style="margin-top: 10px;font-family: IBM Plex Sans;">
                     </div>
-                    <div style="width: 250px;font-family: hedliner;"><button class="btn btn-primary d-block w-100" id="AgregarPreguntaBtn" type="submit" style="font-size: 20px;border-top-left-radius: 10px;border-top-right-radius: 10px;border-bottom-right-radius: 10px;border-bottom-left-radius: 10px;margin-top: 10px;font-family: hedliner;">Agregar Pregunta</button></div>
+                    <div style="width: 250px;font-family: hedliner;"><button class="btn btn-primary d-block w-100" id="AgregarPreguntaBtn" type="submit" style="font-size: 20px;border-top-left-radius: 10px;border-top-right-radius: 10px;border-bottom-right-radius: 10px;border-bottom-left-radius: 10px;margin-top: 10px;font-family: hedliner;color: var(--bs-CR-gray); background-color: var(--bs-CR-orange);">Agregar Pregunta</button></div>
                     <div class="list-group" style="margin-top: 10px;font-family: hedliner;">
                         
                         
