--- a/Modulo De config/InformacionDelEstudio.html
+++ b/Modulo De config/InformacionDelEstudio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Blank Page - Brand</title>
+    <title>Informacion del Estudio - Cheetah Research</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&amp;display=swap">
@@ -75,6 +75,14 @@
                 <div class="card" id="contentCard_PaginaOverview" style="margin: 0px;height: calc(100vh - 0px);padding: 10px;overflow-y: scroll; position: relative;">
                     <h2 style="color: var(--bs-emphasis-color);font-weight: bold;font-family: hedliner;">Transcripción de Encuestas</h2>
                     <div class="p-3 p-xl-4" style="font-family: hedliner;">
+                        
+                        <div class="d-flex align-items-center" style="font-size: 24px; font-weight: bold; font-family: hedliner;">
+                            <span>Encuestas Aplicadas:</span>
+                            <label id="EncuestasLBL" style="margin-left: 10px;">0</label>
+                        </div>
+
+                        <hr>
+                        
                         <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-end" style="width: 25%;margin-top: 10px;font-family: hedliner;">
                             <button class="btn btn-primary d-block w-100" id="DescargarTranscrptBtn" style="font-weight: bold;font-size: 20px;border-top-left-radius: 10px;border-top-right-radius: 10px;border-bottom-right-radius: 10px;border-bottom-left-radius: 10px;margin-right: 10px;margin-bottom: 10px;font-family: hedliner;">Descargar Transcripciones</button>
                         </div>
